# cmake-biolerPlate

./: .gitignore  CMakeLists.txt  build.sh
include/: structure.h
src/: Main.cpp
src/Helper/: logger.cpp  logger.h
src/handlers/: main.cpp
src/headers/: eventHandler.h
src/include/: eventHandler.h  logger.h
src/structures/: input.cpp
